Sat Oct 16 17:08:12 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* Rename BOOL/TRUE/FALSE to ISO C99's bool/true/false.
	* Rename WORD/FLOAT into ARMWord/ARMFloat.

Tue Feb 2  18:29:10 2010  Lee Noar  <leenoar@sky.com>

	Fix build errors:

	* filestack.c: #include header that defines riscosify related
	bits.
	* os.h: Make sure declaration of CanonicalisePath matches
	definition.

Wed Jan 27 00:31:34 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* filestack.c/filestack.h: Merged the macro, external linked,
	'if'/'while' code all together so that nested usage works and
	results also in much cleaner code (too many changes to mention in
	detail).
	* depend.c: Proper dependency generation (all input files are
	taken into account).
	* symbol.h(SYMBOL_MACRO_LOCAL): Set when symbol is only defined
	as macro local variable.
	* m_cpuctrl.c(fixBranchT,fixAdrl,fixInt): Drop inputLineNo parameter.
	* help_cop.c(fixCopOffset): Likewise.
	* decode.h(returnvalue): Removed.
	(decode): Made return parameter void.
	* error.c(source,errorInit): Remove.
	(TB): Rename to DoThrowback.
	* error.c/error.h(errorAbort,errorAbortLine): Created to report the
	final error and use this where applicable.
	(ErrorSerious): Removed.
	(error): Drop c parameter.
	(errorLine): Drop c parameter.
	(errorOutOfMem): Drop fn parameter.
	* riscos_c.c(CanonicalisePath): Constify return pointer.
	* regression/Makefile: Added comments.
	* regression/tests_pass/variables.s: Added.

Sun Jan 17 15:23:22 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* error.c(doline): Fix RISC OS native build.  Bug #188.

Sun Jan 10 04:41:35 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac: Version 1.48
	* decode.c(decode): Avoid variable being written but not read
	afterwards.  Follow constification of macro functions.
	* error.c(doline): Likewise.
	* rname.c(riscos_to_unix): Likewise.
	* whileif.c(if_skip,while_skip): Likewise.
	* variables.c(declare_var,c_lcl): Warn when same variable get