@@ -6,7 +6,8 @@ asasm_CFLAGS = -D_GNU_SOURCE -std=c99 \
 	-W -Wall -pedantic -Wbad-function-cast -Wcast-align \
 	-Wchar-subscripts -Winline \
 	-Wmissing-prototypes -Wnested-externs -Wpointer-arith \
-	-Wredundant-decls -Wshadow -Wstrict-prototypes -Wwrite-strings
+	-Wredundant-decls -Wshadow -Wstrict-prototypes -Wwrite-strings \
+	-DGCCSDK_REVISION=\"$(shell svnversion -n ${srcdir} /trunk/gcc4/riscos/asasm)\"
 asasm_LDFLAGS = -lm
 asasm_SOURCES=area.c asm.c code.c commands.c decode.c depend.c error.c \
 	eval.c expr.c filestack.c fix.c get.c help_cop.c help_cpu.c \
