@@ -23,6 +23,8 @@
 #ifndef output_header_included
 #define output_header_included
 
+#include "config.h"
+
 #include "global.h"
 
 void outputInit (const char *outfile);
@@ -34,9 +36,9 @@ void outputElf (void);
 
 extern const char *idfn_text;
 #ifdef NO_ELF_SUPPORT
-#  define DEFAULT_IDFN "GCCSDK ASASM AOF Assembler " VERSION " (" __DATE__ ")"
+#  define DEFAULT_IDFN "GCCSDK ASASM AOF Assembler " VERSION " (r" GCCSDK_REVISION ", " __DATE__ ")"
 #else
-#  define DEFAULT_IDFN "GCCSDK ASASM AOF/ELF Assembler " VERSION " (" __DATE__ ")"
+#  define DEFAULT_IDFN "GCCSDK ASASM AOF/ELF Assembler " VERSION " (r" GCCSDK_REVISION ", " __DATE__ ")"
 #endif
 
 #if defined(WORDS_BIGENDIAN)
